--- a/secondhome.html
+++ b/secondhome.html
@@ -576,7 +576,7 @@ border:0px;
       <div class="container featured-themes">
         <h2 class="fw-bold">FEATURED THEMES</h2>
         <div class="row mt-4">
-           <a href="thsrit1.html"><div class="col-6 col-md-3 theme-card">
+           <a href="allpolo.html"><div class="col-6 col-md-3 theme-card">
                 <div class="gradient-bg bg1">
                     <img src="https://printo-s3.dietpixels.net/site/2025/M&S%20t-shirts/T-shirt_1740039238.jpg?quality=70&format=webp&w=640" alt="Anime"></a> 
                 </div>
