--- a/allpolo.html
+++ b/allpolo.html
@@ -264,21 +264,21 @@ body {
         <p class="price">₹999</p>
         <p class="rating">⭐ 4.5/5</p>
         <p class="cashback">Get ₹100 Cashback</p>
-        <a href="cost.html" class="buy-btn">Buy Now</a>
+        <a href="allpolocostmize.html" class="buy-btn">Buy Now</a>
       </div>
     </div>
     <!-- Repeat above card 10 times with different content if needed -->
 
     <!-- Just duplicating the same for now 10 times -->
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Crew%20Neck/app_1729239783.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2025/M&S%20t-shirts/T-shirt_1740039238.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.htmll" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/1000_1725352932.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/Polo_1725448502.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/1440_1725448502.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Shop%20by%20need/Round-neck_1728467856.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
-    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="cost.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Crew%20Neck/app_1729239783.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2025/M&S%20t-shirts/T-shirt_1740039238.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/1000_1725352932.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/Polo_1725448502.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Jack%20and%20Jones/1440_1725448502.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Shop%20by%20need/Round-neck_1728467856.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
+    <div class="card"><img src="https://printo-s3.dietpixels.net/site/2024/Tote%20bag/regular_1721716377.jpg?quality=70&format=webp&w=640" alt="Product"><div class="card-body"><h3 class="card-title">Product Name</h3><p class="price">₹999</p><p class="rating">⭐ 4.5/5</p><p class="cashback">Get ₹100 Cashback</p><a href="allpolocostmize.html" class="buy-btn">Buy Now</a></div></div>
     
   </div>
 <div class="new1">
@@ -330,7 +330,7 @@ body {
         <div class="product-title">Black Aetas Cap</div>
         <div class="product-price">₹249</div>
         <div>
-          <a href="capcostmize.html" class="buy-btn">Buy Now</a>
+          <a href="capcostmiuze.html" class="buy-btn">Buy Now</a>
         
         </div>
       </div>
