--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@ h1, h2, h3, h4, h5, h6 {
                             <li><a href="#">Support Policy</a></li>
                             <li><a href="#">Privacy</a></li>
                             <li><a href="teamlogin.html">team login </a></li>
+                            <li><a href="manpenal.html">team login </a></li>
                         </ul>
                     </div>
                 </div>
