--- a/manpenal.html
+++ b/manpenal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+]<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -40,17 +40,19 @@
         </div>
         <div class="side-nav">
             <ul>
-                <li onclick="loadPage('dashboard')"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
-                <li onclick="loadPage('manage-employees')"><i class="fa fa-user"></i> Manage Employees</li>
-                <li onclick="loadPage('manage-employers')"><i class="fa fa-users"></i> Manage Employers</li>
-                <li onclick="loadPage('withdrawals')"><i class="fa fa-credit-card"></i> Withdrawal Request</li>
-                <li onclick="loadPage('projects')"><i class="fa fa-list-alt"></i> List Of Projects</li>
-                <li onclick="loadPage('analytics')"><i class="fas fa-chart-bar"></i> Analytics</li>
-                <li onclick="loadPage('payments')"><i class="fas fa-money-check-alt"></i> Payment History</li>
-                <li onclick="loadPage('notifications')"><i class="fa fa-bell"></i> Notifications</li>
-                <li onclick="loadPage('accounts-ledger')"><i class="fa fa-briefcase"></i> Accounts-Ledger</li>
+                <li><a href="#" onclick="loadPage('dashboard')"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="#" onclick="loadPage('manage-employees')"><i class="fa fa-user"></i> Manage Employees</a></li>
+                <li><a href="#" onclick="loadPage('manage-employers')"><i class="fa fa-users"></i> Manage Employers</a></li>
+                <li><a href="#" onclick="loadPage('withdrawals')"><i class="fa fa-credit-card"></i> Withdrawal Request</a></li>
+                <li><a href="#" onclick="loadPage('projects')"><i class="fa fa-list-alt"></i> List Of Projects</a></li>
+                <li><a href="#" onclick="loadPage('analytics')"><i class="fas fa-chart-bar"></i> Analytics</a></li>
+                <li><a href="#" onclick="loadPage('payments')"><i class="fas fa-money-check-alt"></i> Payment History</a></li>
+                <li><a href="#" onclick="loadPage('notifications')"><i class="fa fa-bell"></i> Notifications</a></li>
+                <li><a href="#" onclick="loadPage('accounts-ledger')"><i class="fa fa-briefcase"></i> Accounts-Ledger</a></li>
+                <li><a href="accounthandell.html" onclick="loadPage('salary')"><i class="fa fa-money"></i> All Accounts Handle</a></li>
             </ul>
         </div>
+        
         <div class="content" id="content-area">
             <h3>Welcome to Admin Panel</h3>
             <p>Select an option from the menu.</p>
