--- a/manpenal.html
+++ b/manpenal.html
@@ -72,7 +72,7 @@
               <a href="E:\MY DATA COCHING\printcrelity\emloye profle.html"><li onclick="loadPage('profile')"><i class="fa fa-user"></i> Profile</li></a>
                 <li onclick="loadPage('notifications')"><i class="fa fa-bell"></i> Notifications</li>
                 <li><a href="E:\MY DATA COCHING\all  penal\mange user.html" onclick="loadPage('checkOrders')"><i class="fas fa-list"></i>all penal</a></li>
-                <li><a href="caporderpenal.html" onclick="loadPage('checkOrders')"><i class="fas fa-list"></i>cup orders</a></li>
+                <li><a href="caporderpenal" onclick="loadPage('checkOrders')"><i class="fas fa-list"></i>cap orders</a></li>
                 <li><a href="polotshiertpenal.html" onclick="loadPage('checkOrders')"><i class="fas fa-list"></i>polo t-shirt orders</a></li>
 
             </ul>
