--- a/CustomerProductUpload.html
+++ b/CustomerProductUpload.html
@@ -2,91 +2,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Upload Your Product</title>
+  <title>Admin Panel - Product Approvals</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f7f9fc;
+      background: #eef2f7;
       padding: 20px;
     }
-    form {
+    .product-card {
       background: white;
       padding: 20px;
+      margin-bottom: 20px;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      max-width: 500px;
-      margin: auto;
+      display: flex;
+      align-items: flex-start;
     }
-    input, textarea, button {
-      width: 100%;
-      margin-bottom: 15px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+    .product-card img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-right: 20px;
+    }
+    .product-details {
+      flex: 1;
     }
     button {
-      background-color: green;
+      margin-right: 10px;
+      padding: 8px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
       color: white;
       font-weight: bold;
-      cursor: pointer;
+    }
+    .approve { background-color: green; }
+    .reject { background-color: red; }
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
     }
   </style>
 </head>
 <body>
 
-<h2 style="text-align:center;">Upload Your Product</h2>
+<h2>Admin Panel - Product Approvals</h2>
 
-<form id="productForm">
-  <input type="text" id="productName" placeholder="Product Name" required>
-  <input type="number" id="productPrice" placeholder="Price" required>
-  <textarea id="productDescription" placeholder="Product Description" required></textarea>
-  <input type="file" id="productImage" accept="image/*" required>
-  <button type="submit">Upload Product</button>
-</form>
+<div id="productList"></div>
 
 <script>
-  const customerId = localStorage.getItem('currentCustomerId'); // मान लो login के बाद customerId save हो गई थी
+  const productListDiv = document.getElementById('productList');
 
-  document.getElementById('productForm').addEventListener('submit', function(e) {
-    e.preventDefault();
+  function loadProducts() {
+    let products = JSON.parse(localStorage.getItem('products')) || [];
 
-    if (!customerId) {
-      alert('Customer not logged in!');
+    productListDiv.innerHTML = '';
+
+    if (products.length === 0) {
+      productListDiv.innerHTML = "<p>No products found!</p>";
       return;
     }
 
-    const productName = document.getElementById('productName').value;
-    const productPrice = document.getElementById('productPrice').value;
-    const productDescription = document.getElementById('productDescription').value;
-    const productImageInput = document.getElementById('productImage');
+    products.forEach((product, index) => {
+      if(product.status === "pending") { // सिर्फ pending products दिखेंगे
+        const productCard = document.createElement('div');
+        productCard.className = 'product-card';
+        productCard.innerHTML = `
+          <img src="${product.image}" alt="Product Image">
+          <div class="product-details">
+            <h3>${product.name}</h3>
+            <p><strong>Price:</strong> ₹${product.price}</p>
+            <p><strong>Description:</strong> ${product.description}</p>
+            <p><strong>Customer ID:</strong> ${product.customerId}</p>
+            <button class="approve" onclick="approveProduct(${index})">Approve</button>
+            <button class="reject" onclick="rejectProduct(${index})">Reject</button>
+          </div>
+        `;
+        productListDiv.appendChild(productCard);
+      }
+    });
+  }
 
-    if (productImageInput.files.length === 0) {
-      alert('Please upload a product image.');
-      return;
-    }
+  function approveProduct(index) {
+    let products = JSON.parse(localStorage.getItem('products')) || [];
+    products[index].status = "approved";
+    localStorage.setItem('products', JSON.stringify(products));
+    loadProducts();
+    alert('Product Approved Successfully!');
+  }
 
-    const reader = new FileReader();
-    reader.onload = function(event) {
-      const productImage = event.target.result; // Image Base64 String में
+  function rejectProduct(index) {
+    let products = JSON.parse(localStorage.getItem('products')) || [];
+    products[index].status = "rejected";
+    localStorage.setItem('products', JSON.stringify(products));
+    loadProducts();
+    alert('Product Rejected!');
+  }
 
-      const product = {
-        name: productName,
-        price: productPrice,
-        description: productDescription,
-        image: productImage,
-        customerId: customerId,
-        status: "pending" // default pending
-      };
-
-      let products = JSON.parse(localStorage.getItem('products')) || [];
-      products.push(product);
-      localStorage.setItem('products', JSON.stringify(products));
-
-      alert('Product Uploaded Successfully! Waiting for Admin Approval.');
-      document.getElementById('productForm').reset();
-    };
-    reader.readAsDataURL(productImageInput.files[0]);
-  });
+  loadProducts(); // Page खुलते ही Products load होंगे
 </script>
 
 </body>
