--- a/secondhome.html
+++ b/secondhome.html
@@ -522,6 +522,7 @@ border:0px;
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Dresses</a></li>
                             <li><a class="dropdown-item" href="#">Tops</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -532,6 +533,9 @@ border:0px;
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">ARTIST MERCH</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="costumersellregstier.html">Sell my prodcuct</a>
                     </li>
                 </ul>
 
